[project]
name = "bee-hive"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "bump2version>=1.0.1",
    "pytest>=8.0.0",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
bee-hive-core = { workspace = true }
bee-hive-flower = { workspace = true }
bee-hive-nectar = { workspace = true }
